translation-tool/inputs/source_meta/objects/Attribute_Standard_Value__c.object
<CustomObject>
    <description>Attribute Standard Values</description>
    <fields>
        <fullName>ATTR_VAL_ID__c</fullName>
        <description>Attribute Value ID</description>
        <externalId>true</externalId>
        <label>ATTR VAL ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attribute Name</description>
        <inlineHelpText>Attribute Name</inlineHelpText>
        <label>Attribute Name</label>
        <referenceTo>Master_Attribute__c</referenceTo>
        <relationshipLabel>Attribute Standard Values</relationshipLabel>
        <relationshipName>Attribute_Standard_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <description>Attribute Value</description>
        <inlineHelpText>Attribute Value</inlineHelpText>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute Standard Value</label>
    <nameField>
        <displayFormat>ATTRVAL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Standard Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>